# decimal

./: .env  .gitignore  DATA_MODEL.md  IMPLEMENTATION_BLUEPRINT.md  INDEXER_RECONSTRUCTION_SPEC.md  MATCHING_ENGINE_SPEC.md  Makefile  PRODUCT_SPEC.md  README.md  TESTBENCH.md  TESTING.md  architectures.md  collection-d81a27b1-e2f1-4ea4-afb2-0ca906b8d805-proof.json  diagram.md  docker-compose.yml  list.md  lol.md  payment-proof-3754ab08-f63a-4d9b-a5d5-9f8ddfd1c118.json  payment-run-proof-d84eef99-9752-47b1-9ac4-c205e27ac263.json  product_direction.md  runproof.json  scorecard.md  tough.txt  vercel.json
.claude/: settings.json
.design-sync/: NOTES.md  build-css.sh  config.json  conventions.md
.playwright-mcp/: page-2026-04-08T18-45-49-024Z.yml  page-2026-04-08T18-46-15-912Z.yml  page-2026-04-08T18-48-28-798Z.yml  page-2026-04-08T18-48-48-847Z.yml  page-2026-04-08T18-49-07-131Z.yml  page-2026-04-08T18-51-43-195Z.yml  page-2026-04-08T18-51-59-128Z.yml  page-2026-04-09T19-20-11-809Z.yml  page-2026-04-09T19-30-21-192Z.yml  page-2026-04-09T19-31-15-186Z.yml  page-2026-04-09T19-33-22-907Z.yml  page-2026-04-09T19-33-46-887Z.yml
api/: .env.example  README.md  package-lock.json  package.json
applications/: ASSET-KIT.md  CLAIMS-LEDGER.md  README.md  outreach.md  tracker.md  yc-fall-2026.md
clickhouse/: README.md
yellowstone/: .env  .env.example  Cargo.toml
yellowstone/src/: config.rs  control_plane.rs  main.rs  storage.rs
yellowstone/src/yellowstone/: matcher.rs  mod.rs  payment_reconstruction.rs  subscriptions.rs  transaction_context.rs  transfer_reconstruction.rs
(+509 files in other folders)
