[package]
name = "yellowstone"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
bs58 = "0.5.1"
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
futures = "0.3.31"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
spl-token = "6.0.0"
tokio = { version = "1.49.0", features = ["full"] }
tonic = { version = "0.12.3", features = ["tls", "tls-roots"] }
urlencoding = "2.1.3"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
yellowstone-grpc-client = "4.0.0"
yellowstone-grpc-proto = "4.0.0"
